getelement by classname and id

--- a/index.html
+++ b/index.html
@@ -17,11 +17,25 @@
     </header>
     <main>
         <h1>Welcome to my Dom</h1>
-        <ul>
-            <li>Shafayet</li>
-            <li>Jalali</li>
-            <li>Bonobash</li>
-        </ul>
+        <section>
+            <ul>
+                <li>Shafayet</li>
+                <li>Jalali</li>
+                <li>Bonobash</li>
+            </ul>
+        </section>
+        <section>
+            <h1 id="food_title">Foods I love</h1>
+            <ul>
+                <li>Rice</li>
+                <li>Potato</li>
+                <li>Fish</li>
+                <li class="foreign">Lentils</li>
+                <li class="foreign">Burger</li>
+                <li class="foreign">Pizza</li>
+                <li>Pasta</li>
+            </ul>
+        </section>
     </main>
     <script src="js/script.js"></script>
 </body>
