--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <h1>This is my header no banner</h1>
     </header>
     <main>
+        <section>
+            <div id="old-dhaka">
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos beatae <span>manage a span text</span> autem itaque adipisci perspiciatis repellat voluptatum laborum officiis, nesciunt, exercitationem harum saepe, <span>Text more and more</span> provident deleniti dolores expedita natus culpa.</p>
+                <h1>welcome to our <span>dom world</span></h1>
+            </div>
+        </section>
         <h1>Welcome to my Dom</h1>
         <section>
             <ul>
@@ -36,7 +42,19 @@
                 <li>Pasta</li>
             </ul>
         </section>
+        <section id="players_container">
+            <h1>Players</h1>
+            <ul>
+                <li>Messi</li>
+                <li>Pele</li>
+                <li>Ronaldo</li>
+                <li>Embappe</li>
+                <li>Ronaldo</li>
+            </ul>
+        </section>
     </main>
     <script src="js/script.js"></script>
+    <script src="js/cssJS.js 
+    "></script>
 </body>
 </html>
