nodeList and htmlCollection learn

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </section>
         <section id="players_container">
             <h1>Players</h1>
-            <ul>
+            <ul id="players_list">
                 <li>Messi</li>
                 <li>Pele</li>
                 <li>Ronaldo</li>
@@ -54,7 +54,7 @@
         </section>
     </main>
     <script src="js/script.js"></script>
-    <script src="js/cssJS.js 
-    "></script>
+    <script src="js/cssJS.js "></script>
+    <script src="js/child.js"></script>
 </body>
 </html>
