--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <h1>This is my header no banner</h1>
     </header>
-    <main>
+    <main id="main_container">
         <section>
             <div id="old-dhaka">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos beatae <span>manage a span text</span> autem itaque adipisci perspiciatis repellat voluptatum laborum officiis, nesciunt, exercitationem harum saepe, <span>Text more and more</span> provident deleniti dolores expedita natus culpa.</p>
@@ -56,5 +56,6 @@
     <script src="js/script.js"></script>
     <script src="js/cssJS.js "></script>
     <script src="js/child.js"></script>
+    <script src="js/megaChild.js"></script>
 </body>
 </html>
